List channels, view channels, post new message to channels
